2011-12-21 Tomas Rybka <Tomas dot Rybka at solarwinds dot com>
	* src/filter.cpp, src/util.h, src/util.cpp: reduce the tim needed
	for merging partial results from different data partitions by
	using a binary merging approach

2011-12-20 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp, src/bord.h: add special cases for megeing with two
	key columns
	* tests/Makefile.am: update test case 18 and 19 to check for the
	new functions

2011-12-15 Tomas Rybka <Tomas dot Rybka at solarwinds dot com>
	* src/bord.cpp: update nEvents in ibis::bord::merge, and pass
	array_t objects to ibis::bord::column::append as required
	* src/capi.cpp: assign _capi_tablex to 0 after deleting the
	existing value

2011-12-12 John Wu <John dot Wu at ACM dot org>
	* src/util.h: change the condition on atomic operation to be gcc
	version > 4 and on LINUX only (remove the negative conditions)
	* win/win.mak, win/MinGW.mak: update to work with a MS Windows
	installation inside a virtual machine
	* src/thula.cpp: replace countdistinct in doTest with count to
	exercise the new aggregation-by-parts functionality (this reduces
	the memory usage for check-sq0, check-sq1 and check-sq2)
	* src/selectParser.yy: replace incoming arithmetic expression to
	function count with "*"

2011-12-09 John Wu <John dot Wu at ACM dot org>
	* src/column.cpp: update the log messages printed from the
	constructors
	* src/bord.cpp:2618 add statements to update the number of rows in
	the merged table (to address the problems reported by Petr Velan)

2011-12-08 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp: in merge1T a number of loops incorrectly used
	kin1.size() instead of vin1.size(), which cause loops to overstep
	their bounds, merge1T neglected to increment counters in the case
	involving matching keys, merge12 incorrectly used the type of u2
	for v1 (both above problems were revealed with the sample data
	from Petr Velan <thorgrin @ gmail.com>)